fix: Paths.get() instead of Path.of